--- a/styles.css
+++ b/styles.css
@@ -43,7 +43,7 @@ pinky orange: #F7D2C9
 }
 
 
-/* Hero section */
+/* Home section */
 .hero-img{
     width: 600px;
     padding: 20px 0px 0px 30px;
@@ -51,6 +51,7 @@ pinky orange: #F7D2C9
 
 .row-hero{
     margin-top: 60px;
+    margin-bottom: 50px;
 }
 
 #headingGroup h1, h2, p{
@@ -58,13 +59,48 @@ pinky orange: #F7D2C9
 }
 
 #headingGroup h1{
-    font-size: 2rem;
+    font-size: 1.9rem;
 }
 
 #headingGroup h2{
-    font-size: 1.5rem;
+    font-size: 1.2rem;
+    margin-bottom: 30px;
 }
 
 #headingGroup p{
     font-size: 0.8rem;
+    line-height: 2;
+}
+
+.btn{
+    border: 1px solid #6064ea;
+    color: #FD886A;
+    margin: 30px 0px;
+}
+
+.btn:hover{
+    background-color: #FD886A;
+    border: 1px solid #6064ea;
+    opacity: 70%;
+}
+
+.coded-by {
+    margin-top: 0;
+    font-size: 15px;
+  }
+
+footer{
+    background-color: #e2f0fc;
+    font-size: 0.8rem;
+    margin: 0;
+    padding: 20px 0px;
+    text-align: center;
+}
+
+footer p{
+    margin: 0;
+}
+
+footer a:hover{
+    text-decoration: none;
 }
