--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,6 @@ pinky orange: #F7D2C9
     margin-top: 10px;
 }
 
-
 /* Home section */
 .hero-img{
     width: 600px;
@@ -90,16 +89,24 @@ section{
 .btn{
     border: 0.75px solid #6064ea;
     background-color: #fce5c9;
-    color: #FD886A;
     font-size: 0.9rem;
     margin: 30px 0px;
 }
 
 .btn:hover{
-    background-color: #FD886A;
+    background-color: #6064ea;
     border: 1px solid #6064ea;
     opacity: 85%;
     transition: width 2s, height 2s, background-color 1s, transform 2s;
+}
+
+.btn a{
+    text-decoration: none;
+    color: #FD886A;
+}
+
+.btn a:hover{
+    color: #FD886A;
 }
 
 .coded-by {
